Create basic rough Dynamics/Collision detection simulation for test purposes

--- a/Tests/DeterministicPhysicsLibrary.Tests.asmdef
+++ b/Tests/DeterministicPhysicsLibrary.Tests.asmdef
@@ -4,9 +4,9 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "DeterministicPhysicsLibrary",
         "FixedPoint.SubTypes",
-        "FixedPoint.Math"
+        "FixedPoint.Math",
+        "DeterministicPhysicsLibrary.Types"
     ],
     "includePlatforms": [
         "Editor"
